Make sure panning/scrolling display can happen on small screen.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -48,3 +48,17 @@ body {
     width: 100% !important;
   }
 }
+
+@media screen and (orientation:landscape) and (max-height: 340px),
+       screen and (orientation:landscape) and (max-width: 630px),
+       screen and (orientation:portrait) and (max-width: 360px),
+       screen and (orientation:portrait) and (max-height: 740px)
+{
+  html {
+    overflow: auto;
+  }
+
+  body {
+    position: static;
+  }
+}
